--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -65,10 +65,24 @@
     "STATE_DONE": "Done",
     "SUPPORT": "Support",
     "OPPOSE": "Oppose",
-    "COMMENTS": "Comments",
-    "ADD_COMMENT": "Add Comment",
-    "COMMENT_PLACEHENTER": "Write your comment and press Enter to submit...",
-    "SUBMIT_COMMENT": "Submit"
+            "COMMENTS": "Comments",
+        "ADD_COMMENT": "Add Comment",
+        "COMMENT_PLACEHENTER": "Write your comment and press Enter to submit...",
+        "SUBMIT_COMMENT": "Submit",
+        "COLLABORATORS": "Collaborators",
+        "COLLABORATE": "Collaborate",
+        "COLLABORATION_REQUESTS": "Collaboration Requests",
+        "PENDING": "Pending",
+        "ACCEPT": "Accept",
+        "REJECT": "Reject",
+        "REMOVE": "Remove",
+        "JOINED": "Joined",
+        "REQUEST_COLLABORATION": "Request Collaboration",
+        "COLLABORATION_MESSAGE": "Message (optional)",
+        "COLLABORATION_MESSAGE_PLACEHOLDER": "Tell the creator why you want to collaborate...",
+        "SEND_REQUEST": "Send Request",
+        "NO_COLLABORATORS": "No collaborators yet",
+        "NO_REQUESTS": "No pending requests"
   },
   "SETTINGS": {
     "GENERAL": "General",
