--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -65,10 +65,24 @@
     "STATE_DONE": "Completado",
     "SUPPORT": "Apoyar",
     "OPPOSE": "Oponer",
-    "COMMENTS": "Comentarios",
-    "ADD_COMMENT": "Agregar Comentario",
-    "COMMENT_PLACEHENTER": "Escribe tu comentario y presiona Enter para enviar...",
-    "SUBMIT_COMMENT": "Enviar"
+            "COMMENTS": "Comentarios",
+        "ADD_COMMENT": "Agregar Comentario",
+        "COMMENT_PLACEHENTER": "Escribe tu comentario y presiona Enter para enviar...",
+        "SUBMIT_COMMENT": "Enviar",
+        "COLLABORATORS": "Colaboradores",
+        "COLLABORATE": "Colaborar",
+        "COLLABORATION_REQUESTS": "Solicitudes de Colaboración",
+        "PENDING": "Pendiente",
+        "ACCEPT": "Aceptar",
+        "REJECT": "Rechazar",
+        "REMOVE": "Remover",
+        "JOINED": "Se Unió",
+        "REQUEST_COLLABORATION": "Solicitar Colaboración",
+        "COLLABORATION_MESSAGE": "Mensaje (opcional)",
+        "COLLABORATION_MESSAGE_PLACEHOLDER": "Dile al creador por qué quieres colaborar...",
+        "SEND_REQUEST": "Enviar Solicitud",
+        "NO_COLLABORATORS": "Aún no hay colaboradores",
+        "NO_REQUESTS": "No hay solicitudes pendientes"
   },
   "SETTINGS": {
     "GENERAL": "General",
