--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -138,5 +138,27 @@
     "MAX_LENGTH": "La longitud máxima es de {{max}} caracteres",
     "EMAIL_FORMAT": "Por favor ingresa una dirección de correo válida",
     "PASSWORD_STRENGTH": "La contraseña debe tener al menos 8 caracteres"
+  },
+  "NO_CONNECTION": {
+    "TITLE": "Sin Conexión a Internet",
+    "MESSAGE": "Parece que has perdido tu conexión a internet. Por favor verifica tu configuración de red e inténtalo de nuevo.",
+    "STATUS": "Estado de Conexión",
+    "LAST_CHECK": "Última Verificación",
+    "CHECKING": "Verificando...",
+    "RETRY": "Reintentar Conexión",
+    "GO_HOME": "Ir al Inicio",
+    "TIPS_TITLE": "Consejos de Solución de Problemas",
+    "TIP_1": "Verifica si tu Wi-Fi o datos móviles están activados",
+    "TIP_2": "Intenta acercarte a tu router o cambiar de red",
+    "TIP_3": "Reinicia tu dispositivo o router si el problema persiste"
+  },
+  "CONNECTION": {
+    "EXCELLENT": "Excelente",
+    "GOOD": "Buena",
+    "FAIR": "Regular",
+    "POOR": "Mala",
+    "OFFLINE": "Desconectado",
+    "UNKNOWN": "Desconocido",
+    "LAST_CHECK": "Última Verificación"
   }
 }
