improve of the no connection page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -147,6 +147,11 @@
     "CHECKING": "Checking...",
     "RETRY": "Retry Connection",
     "GO_HOME": "Go to Home",
+    "AUTO_RECONNECT_STATUS": "Automatic Reconnection",
+    "NEXT_ATTEMPT_IN": "Next attempt in",
+    "AUTO_RECONNECT_DISABLED": "Automatic reconnection is disabled",
+    "START_AUTO_RECONNECT": "Start Auto-Reconnect",
+    "STOP_AUTO_RECONNECT": "Stop Auto-Reconnect",
     "TIPS_TITLE": "Troubleshooting Tips",
     "TIP_1": "Check if your Wi-Fi or mobile data is turned on",
     "TIP_2": "Try moving closer to your router or switching networks",
