--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -147,6 +147,11 @@
     "CHECKING": "Verificando...",
     "RETRY": "Reintentar Conexión",
     "GO_HOME": "Ir al Inicio",
+    "AUTO_RECONNECT_STATUS": "Reconexión Automática",
+    "NEXT_ATTEMPT_IN": "Próximo intento en",
+    "AUTO_RECONNECT_DISABLED": "La reconexión automática está deshabilitada",
+    "START_AUTO_RECONNECT": "Iniciar Auto-Reconexión",
+    "STOP_AUTO_RECONNECT": "Detener Auto-Reconexión",
     "TIPS_TITLE": "Consejos de Solución de Problemas",
     "TIP_1": "Verifica si tu Wi-Fi o datos móviles están activados",
     "TIP_2": "Intenta acercarte a tu router o cambiar de red",
