--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,7 +23,8 @@
     "ERROR": "Error",
     "SUCCESS": "Success",
     "WARNING": "Warning",
-    "INFO": "Information"
+    "INFO": "Information",
+    "PROJECT_NOT_FOUND": "Project not found"
   },
   "AUTH": {
     "LOGIN_TITLE": "Welcome Back",
