--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -130,6 +130,15 @@
     "SCOPE_STATE": "State - State/Province level",
     "SCOPE_NATIONAL": "National - Country level",
     "SCOPE_GLOBAL": "Global - International level",
+    "MEDIA": "Media",
+    "MEDIA_PLACEHOLDER": "Add a photo or video to your project",
+    "ADD_MEDIA": "Add Media",
+    "REPLACE_MEDIA": "Replace Media",
+    "MEDIA_UPLOADING": "Uploading media...",
+    "MEDIA_UPLOAD_SUCCESS": "Media uploaded successfully",
+    "MEDIA_UPLOAD_ERROR": "Error uploading media",
+    "MEDIA_DELETE_SUCCESS": "Media deleted successfully",
+    "MEDIA_DELETE_ERROR": "Error deleting media",
     "SEND_PROJECT": "Send Project",
     "AUTH_REQUIRED": "Authentication Required",
     "AUTH_REQUIRED_MESSAGE": "Please log in to create new items"
@@ -208,6 +217,7 @@
     "TITLE_LABEL": "Title:",
     "SCOPE_LABEL": "Scope:",
     "DESCRIPTION_LABEL": "Description:",
+    "MEDIA_LABEL": "Media:",
     "NEEDS_LABEL": "What We Need:",
     "TITLE_PLACEHOLDER": "Project title",
     "DESCRIPTION_PLACEHOLDER": "Project description",
