--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -130,6 +130,15 @@
     "SCOPE_STATE": "Estatal - Nivel Estado/Provincia",
     "SCOPE_NATIONAL": "Nacional - Nivel País",
     "SCOPE_GLOBAL": "Global - Nivel Internacional",
+    "MEDIA": "Multimedia",
+    "MEDIA_PLACEHOLDER": "Agrega una foto o video a tu proyecto",
+    "ADD_MEDIA": "Agregar Multimedia",
+    "REPLACE_MEDIA": "Reemplazar Multimedia",
+    "MEDIA_UPLOADING": "Subiendo multimedia...",
+    "MEDIA_UPLOAD_SUCCESS": "Multimedia subida exitosamente",
+    "MEDIA_UPLOAD_ERROR": "Error al subir multimedia",
+    "MEDIA_DELETE_SUCCESS": "Multimedia eliminada exitosamente",
+    "MEDIA_DELETE_ERROR": "Error al eliminar multimedia",
     "SEND_PROJECT": "Enviar Proyecto",
     "AUTH_REQUIRED": "Autenticación Requerida",
     "AUTH_REQUIRED_MESSAGE": "Por favor inicia sesión para crear nuevos elementos"
@@ -208,6 +217,7 @@
     "TITLE_LABEL": "Título:",
     "SCOPE_LABEL": "Alcance:",
     "DESCRIPTION_LABEL": "Descripción:",
+    "MEDIA_LABEL": "Multimedia:",
     "NEEDS_LABEL": "Qué Necesitamos:",
     "TITLE_PLACEHOLDER": "Título del proyecto",
     "DESCRIPTION_PLACEHOLDER": "Descripción del proyecto",
