--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -157,17 +157,9 @@
   },
   "NO_CONNECTION": {
     "TITLE": "No Internet Connection",
-    "MESSAGE": "It looks like you've lost your internet connection. Please check your network settings and try again.",
+    "MESSAGE": "You're currently offline. When your connection is restored, we'll automatically redirect you to the home page.",
     "STATUS": "Connection Status",
     "LAST_CHECK": "Last Check",
-    "CHECKING": "Checking...",
-    "RETRY": "Retry Connection",
-    "GO_HOME": "Go to Home",
-    "AUTO_RECONNECT_STATUS": "Automatic Reconnection",
-    "NEXT_ATTEMPT_IN": "Next attempt in",
-    "AUTO_RECONNECT_DISABLED": "Automatic reconnection is disabled",
-    "START_AUTO_RECONNECT": "Start Auto-Reconnect",
-    "STOP_AUTO_RECONNECT": "Stop Auto-Reconnect",
     "TIPS_TITLE": "Troubleshooting Tips",
     "TIP_1": "Check if your Wi-Fi or mobile data is turned on",
     "TIP_2": "Try moving closer to your router or switching networks",
