--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,7 +24,8 @@
     "SUCCESS": "Success",
     "WARNING": "Warning",
     "INFO": "Information",
-    "PROJECT_NOT_FOUND": "Project not found"
+    "PROJECT_NOT_FOUND": "Project not found",
+    "OPTIONAL": "Optional"
   },
   "AUTH": {
     "LOGIN_TITLE": "Welcome Back",
