--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -118,15 +118,15 @@
     "AUTH_REQUIRED_MESSAGE": "Please log in to edit your profile"
   },
   "NEW_ITEM": {
-    "CREATE_NEW": "Create New",
-    "TITLE": "Title",
-    "TITLE_PLACEHOLDER": "Enter a title for your item",
-    "DESCRIPTION": "Description",
-    "DESCRIPTION_PLACEHOLDER": "Describe what you need or want to offer",
-    "WHAT_WE_NEED": "What We Need",
-    "NEED_PLACEHOLDER": "Add a need or requirement",
+    "CREATE_NEW": "Propose",
+    "TITLE": "What",
+    "TITLE_PLACEHOLDER": "Write here what you want to propose",
+    "DESCRIPTION": "How",
+    "DESCRIPTION_PLACEHOLDER": "Explain it",
+    "WHAT_WE_NEED": "Requirements",
+    "NEED_PLACEHOLDER": "Add requirement",
     "SCOPE": "Scope",
-    "SCOPE_PLACEHOLDER": "Select the scope of your item",
+    "SCOPE_PLACEHOLDER": "Select the scope",
     "SCOPE_GRUPAL": "Grupal - Small Group Collaboration",
     "SCOPE_LOCAL": "Local - Neighbourhood/Community",
     "SCOPE_STATE": "State - State/Province level",
@@ -141,7 +141,7 @@
     "MEDIA_UPLOAD_ERROR": "Error uploading media",
     "MEDIA_DELETE_SUCCESS": "Media deleted successfully",
     "MEDIA_DELETE_ERROR": "Error deleting media",
-    "SEND_PROJECT": "Send Project",
+    "SEND_PROJECT": "Send",
     "AUTH_REQUIRED": "Authentication Required",
     "AUTH_REQUIRED_MESSAGE": "Please log in to create new items"
   },
