--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -118,15 +118,15 @@
     "AUTH_REQUIRED_MESSAGE": "Por favor inicia sesión para editar tu perfil"
   },
   "NEW_ITEM": {
-    "CREATE_NEW": "Crear Nuevo",
-    "TITLE": "Título",
-    "TITLE_PLACEHOLDER": "Ingresa un título para tu elemento",
-    "DESCRIPTION": "Descripción",
-    "DESCRIPTION_PLACEHOLDER": "Describe lo que necesitas o quieres ofrecer",
-    "WHAT_WE_NEED": "Qué Necesitamos",
-    "NEED_PLACEHOLDER": "Agrega una necesidad o requisito",
+    "CREATE_NEW": "Proponer",
+    "TITLE": "Qué",
+    "TITLE_PLACEHOLDER": "Escribe aquí qué quieres proponer",
+    "DESCRIPTION": "Cómo",
+    "DESCRIPTION_PLACEHOLDER": "Explícalo",
+    "WHAT_WE_NEED": "Requerimientos",
+    "NEED_PLACEHOLDER": "Agregar requerimiento",
     "SCOPE": "Alcance",
-    "SCOPE_PLACEHOLDER": "Selecciona el alcance de tu elemento",
+    "SCOPE_PLACEHOLDER": "Seleccionar alcance",
     "SCOPE_GRUPAL": "Grupal - Colaboración de Grupo Pequeño",
     "SCOPE_LOCAL": "Local - Vecindario/Comunidad",
     "SCOPE_STATE": "Estatal - Nivel Estado/Provincia",
@@ -141,7 +141,7 @@
     "MEDIA_UPLOAD_ERROR": "Error al subir multimedia",
     "MEDIA_DELETE_SUCCESS": "Multimedia eliminada exitosamente",
     "MEDIA_DELETE_ERROR": "Error al eliminar multimedia",
-    "SEND_PROJECT": "Enviar Proyecto",
+    "SEND_PROJECT": "Enviar",
     "AUTH_REQUIRED": "Autenticación Requerida",
     "AUTH_REQUIRED_MESSAGE": "Por favor inicia sesión para crear nuevos elementos"
   },
