--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -118,7 +118,7 @@
     "AUTH_REQUIRED_MESSAGE": "Please log in to edit your profile"
   },
   "NEW_ITEM": {
-    "CREATE_NEW": "New",
+    "CREATE_NEW": "Propose",
     "TITLE": "What",
     "TITLE_PLACEHOLDER": "Write here what you want to propose",
     "DESCRIPTION": "How",
@@ -243,7 +243,10 @@
     "COLLABORATOR_REMOVED": "Collaborator has been removed",
     "ERROR_ACCEPTING_COLLABORATOR": "Error accepting collaborator",
     "ERROR_REJECTING_COLLABORATOR": "Error rejecting collaborator",
-    "ERROR_REMOVING_COLLABORATOR": "Error removing collaborator"
+    "ERROR_REMOVING_COLLABORATOR": "Error removing collaborator",
+    "NEEDS_LOCKED_TITLE": "Needs Section Locked",
+    "NEEDS_LOCKED_MESSAGE": "This section unlocks when your project receives enough community support. The required support varies by project scope.",
+    "SUPPORT_VOTES": "support votes"
   },
   "PUBLIC": {
     "PUBLIC_PROJECT": "Public Project",
